fix navbar z-index fix toggle icon color change Ol marker size

--- a/src/scss/base/_theme-variables.scss
+++ b/src/scss/base/_theme-variables.scss
@@ -16,7 +16,7 @@ html:root {
     --rsk-navbar-height: 104px;
   }
 
-  --ifm-z-index-fixed: 2147483646;
+  --ifm-z-index-fixed: 200;
 
   --bs-pink: #{$pink-light};
   --bs-purple: #{$purple-light};
